[tool.poetry]
name = "noicheck"
version = "0.0.1"
description = "一个用于检查 C++竞赛代码是否规范的小程序"
authors = ["XYCode-Kerman <xycode-xyc@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.0"
rich-click = "^1.7.2"
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
